--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -458,6 +458,7 @@
 		Czech:"Národní Akademie"
 }
 	"Manhattan Project":{
+		Italian:"Progetto Manhattan"
 }
 
 	"Chichen Itza":{
@@ -499,6 +500,7 @@
 }
 
 	"Enables nuclear weapon":{
+		Italian:"Consente l'utilizzo delle armi nucleari"
 }
 
 	"Lighthouse":{
