--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -458,6 +458,8 @@
 		Czech:"Národní Akademie"
 }
 	"Manhattan Project":{
+		Simplified_Chinese:"曼哈顿计划"
+		Traditional_Chinese:"曼哈頓計畫"
 }
 
 	"Chichen Itza":{
@@ -499,6 +501,8 @@
 }
 
 	"Enables nuclear weapon":{
+		Simplified_Chinese:"允许建造核武器"
+		Traditional_Chinese:"允許建造核武器"
 }
 
 	"Lighthouse":{
