--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -1684,13 +1684,15 @@
 	"Bombard":{
 		Italian:"Bombarda"
 		Simplified_Chinese:"轰击"
-		Traditional_Chinese:"轟炸"
+		Traditional_Chinese:"轟擊"
 		Czech:"Bombardovat"
 		Russian:"Бомбардировать"
 		Ukrainian:"Обстрілювати"
 }
 
 	"NUKE":{
+		Simplified_Chinese:"核武器攻击"
+		Traditional_Chinese:"核武器攻擊"
 }
 
 	"Captured!":{// Shown in the battle table when attacking a civilian unit
