--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1292,7 +1292,9 @@
 	}
 
 	"Requires Manhattan Project":{
-},
+		Simplified_Chinese:"需要完成曼哈顿计划"
+		Traditional_Chinese:"需要完成曼哈頓計畫"
+}
 
 	"6 tiles in every direction always visible":{
 		Italian:"6 caselle in ogni direzione sempre visibili"
@@ -1509,6 +1511,8 @@
 	"Nuclear Missile":{
 		Italian:"Missile nucleare"
 		Czech:"Jaderná raketa"
+		Simplified_Chinese:"核导弹"
+		Traditional_Chinese:"核導彈"
 	}
 
 ////// Great units
