--- a/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
+++ b/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
@@ -161,6 +161,7 @@
 }
 
 	"Fallout":{
+		Italian:"Scorie Radioattive"
 		Simplified_Chinese:"核辐射"
 		Traditional_Chinese:"核輻射"
 }
@@ -1046,6 +1047,7 @@
 }
 
 	"Remove Fallout":{
+		Italian:"Rimuovi Scoria Radioattiva"
 		Simplified_Chinese:"消除核辐射"
 		Traditional_Chinese:"消除核輻射"
 }
