Update Buildings.json (#1350)
Italian translations

--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -457,7 +457,9 @@
 		Polish:"Akademia Narodowa"
 		Czech:"Národní Akademie"
 }
+
 	"Manhattan Project":{
+		Italian:"Progetto Manhattan"
 		Simplified_Chinese:"曼哈顿计划"
 		Traditional_Chinese:"曼哈頓計畫"
 }
@@ -501,6 +503,7 @@
 }
 
 	"Enables nuclear weapon":{
+		Italian:"Consente l'utilizzo delle armi nucleari"
 		Simplified_Chinese:"允许建造核武器"
 		Traditional_Chinese:"允許建造核武器"
 }
